@@ -288,7 +288,7 @@ int CompFile_DCMtoATR(FILE *infp, FILE *outfp)
 				Log_print("To process these files, you must first combine the files into a single file.");
 #if defined(WIN32) || defined(DJGPP)
 				Log_print("COPY /B file1.dcm+file2.dcm+file3.dcm newfile.dcm from the DOS prompt");
-#elif defined(linux) || defined(unix)
+#elif defined(__linux__) || defined(unix)
 				Log_print("cat file1.dcm file2.dcm file3.dcm >newfile.dcm from the shell");
 #endif
 			}
